--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "devDependencies": {
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "10.19.0",
+    "npm": "6.14.4"
   }
 }
