--- a/.github/workflows/codeAnalysis.yml
+++ b/.github/workflows/codeAnalysis.yml
@@ -16,7 +16,7 @@ on:
     branches: [ dev ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ master ]
+    branches: [ master dev ]
   schedule:
     - cron: '36 15 * * 3'
 
