--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "start_nodemon": "nodemon"
+    "dev": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/devinbits/books-digital-express#readme",
   "dependencies": {
-    "express": "^4.17.1",
     "dotenv": "^10.0.0",
-    "mysql2": "^2.2.5"
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
