--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "format": "prettier-eslint --write \"{,!(node_modules)/**/}*.{js,jsx}\""
   },
   "repository": {
     "type": "git",
@@ -20,12 +21,21 @@
   },
   "homepage": "https://github.com/devinbits/books-digital-express#readme",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "babel-eslint": "^10.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
+    "husky": "^7.0.0",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "prettier": "^2.3.2",
+    "prettier-eslint-cli": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
@@ -33,5 +43,11 @@
   "engines": {
     "node": "10.19.0",
     "npm": "6.14.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn run format",
+      "...": "..."
+    }
   }
 }
